--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-setuptools==38.2.4
-zc.buildout==2.11.4
+setuptools==42.0.2
+zc.buildout==2.13.3
+wheel
+
+# Windows specific down here (has to be installed here, fails in buildout)
+# Dependency of zope.sendmail:
+pywin32 ; platform_system == 'Windows'
+# SSL Certs on Windows, because Python is missing them otherwise:
+certifi ; platform_system == 'Windows'
+# Dependency of collective.recipe.omelette:
+ntfsutils ; platform_system == 'Windows' and python_version < '3.0'
+# setuptools==38.2.4
+# zc.buildout==2.13.4
+
+Pillow==6.1.0
